# store_django

./: db.sqlite3  pyproject.toml
products/: models.py  urls.py  views.py
products/fixtures/: categories.json  goods.json
products/migrations/: 0001_initial.py
products/templates/products/: base.html  index.html  products.html
store/: settings.py  urls.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  profile.html  registration.html
