[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["ghost <i@nowtiloos.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
